--- a/vagrant_bash_3/Vagrantfile
+++ b/vagrant_bash_3/Vagrantfile
@@ -14,6 +14,7 @@ Vagrant.configure("2") do |config|
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "centos/8"
   config.vm.provision "shell", path: "hw9_vagrant_provision.sh"
+  config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/opt/hw9/.ssh/id_rsa.pub"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -33,7 +34,7 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+  config.vm.network "private_network", ip: "192.168.33.10"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
