--- a/vagrant_bash_3/Vagrantfile
+++ b/vagrant_bash_3/Vagrantfile
@@ -14,7 +14,33 @@ Vagrant.configure("2") do |config|
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "centos/8"
   config.vm.provision "shell", path: "hw9_vagrant_provision.sh"
-  config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/opt/hw9/.ssh/id_rsa.pub"
+  
+  config.vm.provision "shell" do |s|
+    ssh_prv_key = ""
+    ssh_pub_key = ""
+    if File.file?("#{Dir.home}/.ssh/id_rsa")
+      ssh_prv_key = File.read("#{Dir.home}/.ssh/id_rsa")
+      ssh_pub_key = File.readlines("#{Dir.home}/.ssh/id_rsa.pub").first.strip
+    else
+      puts "No SSH key found. You will need to remedy this before pushing to the repository."
+    end
+    s.inline = <<-SHELL
+      if grep -sq "#{ssh_pub_key}" /opt/hw9/.ssh/authorized_keys; then
+        echo "SSH keys already provisioned."
+        exit 0;
+      fi
+      echo "SSH key provisioning."
+      mkdir -p /opt/hw9/.ssh/
+      touch /opt/hw9/.ssh/authorized_keys
+      echo #{ssh_pub_key} >> /opt/hw9/.ssh/authorized_keys
+      echo #{ssh_pub_key} > /opt/hw9/.ssh/id_rsa.pub
+      chmod 644 /opt/hw9/.ssh/id_rsa.pub
+      echo "#{ssh_prv_key}" > /opt/hw9/.ssh/id_rsa
+      chmod 600 /opt/hw9/.ssh/id_rsa
+      chown -R hw9:hw9 /opt/hw9/
+      exit 0
+    SHELL
+  end
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
